--- a/app/src/main/res/layout-sw380dp/fragment_detailed_fragment_carousel.xml
+++ b/app/src/main/res/layout-sw380dp/fragment_detailed_fragment_carousel.xml
@@ -123,8 +123,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/detailed_timenote_comments_rv"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    tools:listitem="@layout/item_comment" />
+                    android:layout_height="wrap_content"/>
 
 
             </androidx.core.widget.NestedScrollView>
