--- a/app/src/main/res/layout/item_comment_pic.xml
+++ b/app/src/main/res/layout/item_comment_pic.xml
@@ -20,7 +20,7 @@
         android:layout_marginStart="8dp"
         android:textSize="13sp"
         android:textColor="@color/colorText"
-        tools:text="Ronny Dahan"
+        tools:text="Ronny Dahan This was amazing course of painting but too much to do @sam "
         app:layout_constraintEnd_toStartOf="@id/comment_more"
         app:layout_constraintStart_toEndOf="@id/comment_user_pic_imageview"
         app:layout_constraintTop_toTopOf="@id/comment_user_pic_imageview"
@@ -28,7 +28,6 @@
         android:layout_height="wrap_content"/>
 
     <ImageView
-        android:visibility="visible"
         android:id="@+id/comment_more"
         android:layout_margin="8dp"
         android:src="@drawable/ic_more_vert_black_profile_24dp"
@@ -43,21 +42,36 @@
         android:id="@+id/comment_time"
         android:textSize="12sp"
         tools:text="2h"
+        android:layout_marginTop="2dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintTop_toBottomOf="@id/comment_username_comment"
+        app:layout_constraintTop_toBottomOf="@id/comment_cv"
         app:layout_constraintStart_toEndOf="@id/comment_user_pic_imageview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <TextView
-        android:visibility="gone"
-        tools:text="Answer"
-        android:textSize="12sp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintStart_toEndOf="@id/comment_time"
+    <androidx.cardview.widget.CardView
+        app:cardCornerRadius="5dp"
+        android:id="@+id/comment_cv"
+        android:layout_marginTop="4dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintStart_toEndOf="@id/comment_user_pic_imageview"
         app:layout_constraintTop_toBottomOf="@id/comment_username_comment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="150dp"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/comment_pic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:cropToPadding="false"
+            android:scaleType="fitStart"
+            android:src="@drawable/category_culture"/>
+
+
+    </androidx.cardview.widget.CardView>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
