--- a/app/src/main/res/layout-sw360dp/fragment_detailed_fragment.xml
+++ b/app/src/main/res/layout-sw360dp/fragment_detailed_fragment.xml
@@ -163,13 +163,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/colorBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="@color/colorBackground"
         app:layout_anchor="@id/detailed_timenote_scc"
         app:layout_anchorGravity="bottom">
+
 
         <ImageView
             android:paddingStart="12dp"
@@ -181,6 +183,17 @@
             app:layout_constraintTop_toTopOf="@id/fragment_detailed_comment_ll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+
+        <ImageView
+            android:visibility="gone"
+            android:paddingHorizontal="8dp"
+            android:id="@+id/detailed_timenote_picture_prev"
+            app:layout_constraintEnd_toStartOf="@+id/fragment_detailed_comment_ll"
+            app:layout_constraintBottom_toBottomOf="@id/fragment_detailed_comment_ll"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/fragment_detailed_comment_ll"
+            android:layout_width="48dp"
+            android:layout_height="48dp"/>
 
         <ProgressBar
             android:visibility="gone"
@@ -202,10 +215,11 @@
             android:background="@drawable/circle_black_stroke_background_comment"
             android:gravity="center"
             android:orientation="horizontal"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/detailed_timenote_add_picture"
-            app:layout_constraintTop_toTopOf="parent">
+            >
 
             <EditText
                 android:id="@+id/comments_edittext"
@@ -230,5 +244,6 @@
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
