--- a/app/src/main/res/layout/fragment_detailed_fragment.xml
+++ b/app/src/main/res/layout/fragment_detailed_fragment.xml
@@ -163,6 +163,16 @@
         android:layout_width="24dp"
         android:layout_height="24dp"/>
 
+    <ImageView
+        android:visibility="gone"
+        android:paddingHorizontal="8dp"
+        android:id="@+id/detailed_timenote_picture_prev"
+        app:layout_constraintEnd_toStartOf="@+id/fragment_detailed_comment_ll"
+        app:layout_constraintBottom_toBottomOf="@id/fragment_detailed_comment_ll"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/fragment_detailed_comment_ll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:id="@+id/fragment_detailed_comment_ll"
