--- a/app/src/main/res/layout/adapter_search_explore.xml
+++ b/app/src/main/res/layout/adapter_search_explore.xml
@@ -1,55 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_marginTop="4dp"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="4dp">
 
     <ImageView
         android:id="@+id/search_explore_category_iv"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:adjustViewBounds="true"
+        android:tint="#25000000"
         app:layout_constraintBottom_toTopOf="@id/search_explore_rv"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="match_parent"
-        android:adjustViewBounds="true"
-        android:layout_height="75dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:shadowColor="@android:color/black"
-        android:textColor="@android:color/white"
-        tools:text="SPORT"
-        android:textStyle="bold"
-        android:textAllCaps="true"
-        android:padding="24dp"
-        android:textSize="20sp"
-        android:shadowRadius="1.5"
-        android:scaleY="1"
-        app:layout_constraintBottom_toTopOf="@id/search_explore_rv"
-        android:scaleX="1"
         android:id="@+id/search_explore_category"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
-
+        android:layout_height="wrap_content"
+        android:padding="24dp"
+        android:scaleX="1"
+        android:scaleY="1"
+        android:shadowColor="@android:color/black"
+        android:shadowRadius="1.5"
+        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
+        android:textAllCaps="true"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/search_explore_rv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="SPORT" />
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:clipToPadding="false"
-        android:background="@color/colorBackground"
         android:id="@+id/search_explore_rv"
-        tools:listitem="@layout/item_search_explore"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorBackground"
+        android:clipToPadding="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/search_explore_category"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        tools:listitem="@layout/item_search_explore" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
