--- a/app/src/main/res/layout/fragment_search_top.xml
+++ b/app/src/main/res/layout/fragment_search_top.xml
@@ -18,6 +18,7 @@
         android:layout_height="0dp"/>
 
     <ProgressBar
+        android:visibility="gone"
         android:id="@+id/search_top_pb"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
