--- a/app/src/main/res/layout/adapter_search_explore.xml
+++ b/app/src/main/res/layout/adapter_search_explore.xml
@@ -6,14 +6,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="4dp">
+    android:layout_marginTop="8dp">
 
     <ImageView
+        android:paddingTop="1dp"
+        android:paddingBottom="1dp"
+        android:scaleType="centerCrop"
+        android:background="@color/colorText"
         android:id="@+id/search_explore_category_iv"
         android:layout_width="match_parent"
         android:layout_height="75dp"
         android:adjustViewBounds="true"
-        android:tint="#25000000"
+        android:tint="#75000000"
         app:layout_constraintBottom_toTopOf="@id/search_explore_rv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,15 +28,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:scaleX="1"
-        android:scaleY="1"
-        android:shadowColor="@android:color/black"
-        android:shadowRadius="1.5"
         android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
         android:textAllCaps="true"
         android:textColor="@android:color/white"
         android:textSize="20sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/search_explore_rv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
