--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -62,6 +62,7 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/home_ll">
 
+
     <com.google.android.material.appbar.AppBarLayout
         android:elevation="0dp"
         app:elevation="0dp"
@@ -113,55 +114,55 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:background="@color/colorBackground"
         android:id="@+id/home_swipe_refresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="top"
         android:fillViewport="false"
         app:layout_anchorGravity="bottom"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:visibility="gone"
+                android:textColor="@color/colorText"
+                android:textSize="14sp"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginTop="16dp"
+                android:text="UPCOMING"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:id="@+id/home_nothing_to_display"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/nothing_to_show_add_some_people_or_center_of_interest_to_begin_your_adventure_with_dayzee"
+                android:textColor="@color/colorText"
+                android:textSize="14sp"
+                android:visibility="gone"/>
 
-                <TextView
-                    android:visibility="gone"
-                    android:textColor="@color/colorText"
-                    android:textSize="14sp"
-                    android:layout_marginHorizontal="8dp"
-                    android:layout_marginTop="16dp"
-                    android:text="UPCOMING"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:background="@color/colorBackground"
+                android:id="@+id/home_rv"
+                android:paddingBottom="8dp"
+                android:clipToPadding="false"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
-                <TextView
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:id="@+id/home_nothing_to_display"
-                    android:layout_width="300dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="8dp"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/nothing_to_show_add_some_people_or_center_of_interest_to_begin_your_adventure_with_dayzee"
-                    android:textColor="@color/colorText"
-                    android:textSize="14sp"
-                    android:visibility="gone"/>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:visibility="visible"
-                    android:id="@+id/home_rv"
-                    android:paddingBottom="8dp"
-                    android:clipToPadding="false"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorBackground"
-                    tools:listitem="@layout/item_timenote"/>
-
-            </LinearLayout>
+        </LinearLayout>
 
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
