--- a/app/src/main/res/layout/fragment_preference_category.xml
+++ b/app/src/main/res/layout/fragment_preference_category.xml
@@ -51,6 +51,7 @@
         tools:listitem="@layout/item_category"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:paddingBottom="16dp"
         android:layout_marginTop="16dp"
         android:paddingHorizontal="12dp"
         android:horizontalSpacing="16dp"
