--- a/app/src/main/res/layout-sw380dp/item_timenote.xml
+++ b/app/src/main/res/layout-sw380dp/item_timenote.xml
@@ -31,6 +31,7 @@
         android:textSize="15sp"
         android:maxLines="1"
         app:layout_constraintEnd_toStartOf="@id/timenote_options"
+        app:layout_constraintBottom_toTopOf="@id/timenote_place"
         android:ellipsize="end"
         app:layout_constraintStart_toEndOf="@id/timenote_pic_user_imageview"
         app:layout_constraintTop_toTopOf="@id/timenote_pic_user_imageview"
