--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -4,12 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:fancy="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
-        android:scaleType="centerCrop"
         android:src="@drawable/audiance"
+        android:scaleType="centerCrop"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
@@ -18,7 +19,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/dayzee"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="24dp"
         android:id="@+id/logo_dayzee"
         android:paddingHorizontal="48dp"
         android:layout_width="wrap_content"
@@ -31,7 +32,7 @@
         app:cardCornerRadius="10dp"
         android:layout_marginHorizontal="24dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="150dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
@@ -249,7 +250,7 @@
         android:layout_marginTop="16dp"
         fancy:fb_textColor="@android:color/white"
         android:paddingVertical="10dp"
-        android:layout_marginBottom="72dp"
+        android:layout_marginBottom="84dp"
         android:layout_marginHorizontal="36dp"
         android:layout_gravity="center"
         android:layout_width="0dp"
