--- a/app/src/main/res/navigation/navigation_graph_tab_nearby.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_nearby.xml
@@ -194,4 +194,13 @@
     </fragment>
     <action android:id="@+id/action_global_profileCalendar" app:destination="@id/profileCalendar" />
     <action android:id="@+id/action_global_navigation" app:destination="@id/navigation" />
+    <fragment
+        android:id="@+id/changePassword"
+        android:name="com.dayzeeco.dayzee.view.loginFlow.ChangePassword"
+        android:label="ChangePassword" >
+        <argument
+            android:name="token"
+            app:argType="string" />
+    </fragment>
+    <action android:id="@+id/action_global_changePassword" app:destination="@id/changePassword" />
 </navigation>
