--- a/app/src/main/res/layout/fragment_new_password.xml
+++ b/app/src/main/res/layout/fragment_new_password.xml
@@ -120,7 +120,7 @@
             <mehdi.sakout.fancybuttons.FancyButton
                 fancy:fb_defaultColor="@android:color/white"
                 fancy:fb_radius="90dp"
-                fancy:fb_text="@string/continu"
+                fancy:fb_text="@string/validate_login"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@id/new_password_again"
                 app:layout_constraintStart_toStartOf="parent"
