--- a/app/src/main/res/navigation/navigation_graph_tab_nearby.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_nearby.xml
@@ -48,6 +48,17 @@
             <action
                 android:id="@+id/action_signup_to_preferenceCategory"
                 app:destination="@id/preferenceCategory" />
+            <action
+                android:id="@+id/action_signup_to_changePassword2"
+                app:destination="@id/changePassword2" />
+        </fragment>
+        <fragment
+            android:id="@+id/changePassword2"
+            android:name="com.dayzeeco.dayzee.view.loginFlow.ChangePassword"
+            android:label="ChangePassword" >
+            <argument
+                android:name="token"
+                app:argType="string" />
         </fragment>
     </navigation>
     <fragment
