--- a/app/src/main/res/layout/fragment_new_password.xml
+++ b/app/src/main/res/layout/fragment_new_password.xml
@@ -81,6 +81,7 @@
                 android:textColorHint="#60FFFFFF"
                 android:id="@+id/new_password"
                 android:textColor="@android:color/white"
+                android:inputType="textPassword"
                 android:textSize="14sp"
                 app:layout_constraintTop_toBottomOf="@id/email_label"
                 app:layout_constraintStart_toStartOf="parent"
