--- a/app/src/main/res/layout/fragment_profile_else.xml
+++ b/app/src/main/res/layout/fragment_profile_else.xml
@@ -30,7 +30,7 @@
                     android:layout_marginHorizontal="16dp"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:id="@+id/profile_name_toolbar"
                     android:gravity="center"
                     android:textSize="16sp"
