--- a/app/src/main/res/layout/item_timenote_root.xml
+++ b/app/src/main/res/layout/item_timenote_root.xml
@@ -7,11 +7,11 @@
     android:layout_height="wrap_content"
     android:background="@color/colorBackground">
 
+
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/timenote_vp"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:scaleType="centerCrop"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
