--- a/app/src/main/res/layout/timenote_view_image.xml
+++ b/app/src/main/res/layout/timenote_view_image.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@android:color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:layout_gravity="center"
+        android:scaleType="centerCrop"
+        app:layout_constrainedHeight="true"
+        android:src="@drawable/audiance"
+        android:background="@color/colorBackground"
         android:id="@+id/create_timenote_pic"
         app:layout_constraintEnd_toEndOf="parent"
-        android:scaleType="centerCrop"
+        app:layout_constraintHeight_min="200dp"
+        app:layout_constraintHeight_max="700dp"
+        android:adjustViewBounds="true"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
     <ImageView
         android:layout_margin="16dp"
