--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -31,7 +31,7 @@
                     android:layout_marginHorizontal="16dp"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:id="@+id/profile_name_toolbar"
                     android:gravity="center"
                     android:textSize="16sp"
@@ -268,6 +268,7 @@
                         android:textSize="15sp"
                         android:gravity="center"
                         android:id="@+id/profile_name"
+                        app:layout_constraintBottom_toTopOf="@id/profile_desc"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/profile_modify_btn"
