--- a/app/src/main/res/layout/item_comment_pic.xml
+++ b/app/src/main/res/layout/item_comment_pic.xml
@@ -6,13 +6,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:layout_margin="8dp"
+    <FrameLayout
+        android:id="@+id/comment_fl"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="36dp"
-        android:id="@+id/comment_user_pic_imageview"
-        android:layout_height="36dp"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            tools:src="@drawable/audiance"
+            android:layout_margin="8dp"
+            android:layout_width="36dp"
+            android:id="@+id/comment_user_pic_imageview"
+            android:layout_height="36dp"/>
+
+        <ImageView
+            android:id="@+id/comment_certified"
+            android:visibility="gone"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="4dp"
+            android:layout_marginEnd="4dp"
+            android:src="@drawable/ic_certified_other"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </FrameLayout>
+
 
     <TextView
         android:fontFamily="sans-serif-light"
@@ -22,8 +40,8 @@
         android:textColor="@color/colorText"
         tools:text="Ronny Dahan This was amazing course of painting but too much to do @sam "
         app:layout_constraintEnd_toStartOf="@id/comment_more"
-        app:layout_constraintStart_toEndOf="@id/comment_user_pic_imageview"
-        app:layout_constraintTop_toTopOf="@id/comment_user_pic_imageview"
+        app:layout_constraintStart_toEndOf="@id/comment_fl"
+        app:layout_constraintTop_toTopOf="@id/comment_fl"
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>
 
@@ -31,8 +49,8 @@
         android:id="@+id/comment_more"
         android:layout_margin="8dp"
         android:src="@drawable/ic_more_vert_black_profile_24dp"
-        app:layout_constraintBottom_toBottomOf="@id/comment_user_pic_imageview"
-        app:layout_constraintTop_toTopOf="@id/comment_user_pic_imageview"
+        app:layout_constraintBottom_toBottomOf="@id/comment_fl"
+        app:layout_constraintTop_toTopOf="@id/comment_fl"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="16dp"
         android:layout_height="16dp"/>
@@ -45,7 +63,7 @@
         android:layout_marginTop="2dp"
         android:layout_marginStart="8dp"
         app:layout_constraintTop_toBottomOf="@id/comment_cv"
-        app:layout_constraintStart_toEndOf="@id/comment_user_pic_imageview"
+        app:layout_constraintStart_toEndOf="@id/comment_fl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -54,7 +72,7 @@
         android:id="@+id/comment_cv"
         android:layout_marginTop="4dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@id/comment_user_pic_imageview"
+        app:layout_constraintStart_toEndOf="@id/comment_fl"
         app:layout_constraintTop_toBottomOf="@id/comment_username_comment"
         android:layout_width="150dp"
         android:layout_height="wrap_content">
@@ -66,7 +84,7 @@
             android:adjustViewBounds="true"
             android:cropToPadding="false"
             android:scaleType="fitStart"
-            android:src="@drawable/category_culture"/>
+            tools:src="@drawable/category_culture"/>
 
 
     </androidx.cardview.widget.CardView>
